# Azure-Integration-Copilot

./: .gitignore  =1.8.0  Makefile  README.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: bicep-engineer.md  cloud-security-engineer.md  devops-engineer.md  foundry-engineer.md  orchestrator.md  planner.md  qa-engineer.md  saas-architect.md  tech-writer.md  terraform-engineer.md  ux-designer.md
.github/workflows/: cd.yml  ci.yml  cicd.yml  codeql.yml  terraform.yml
docs/: integration_copilot_spec.md  security-analysis-2026-04-03.md  security-analysis-2026-04-06.md  threat-model.md
docs/architecture/: tenancy-and-auth.md
docs/guides/: deployment-prerequisites.md  developer-guide.md  opentelemetry-distributed-tracing.md
docs/plan/: 00-product-charter.md  01-system-architecture.md  02-domain-tenancy-and-subscriptions.md  03-domain-projects-and-artifacts.md  04-domain-graph-and-metadata.md  05-domain-eventing-and-processing.md  06-domain-agents-and-tools.md  07-api-design.md  08-frontend-and-ux.md  09-security-networking-and-ops.md  10-implementation-plan.md  11-operations-workbook.md  saas-remediation-plan.md
infra/bicep/: front-door-deploy.bicep  front-door-deploy.json  main.bicep
infra/container-apps/: worker-scan-gate.yaml
infra/scripts/: configure-cloudflare-dns.sh  deploy-container-app.sh  deploy-scan-gate-worker.sh
infra/terraform/: .checkov.yml  .tflint.hcl
src/backend/: .gitignore  Dockerfile  Dockerfile.worker  config.py  main.py  pyproject.toml
src/backend/domains/analysis/: __init__.py  models.py  repository.py  router.py  service.py
src/backend/domains/artifacts/: content_hash.py  models.py  repository.py  router.py  service.py  type_detector.py
src/backend/domains/feature_flags/: models.py  router.py
src/backend/domains/graph/: id_generation.py  models.py  repository.py  router.py  service.py
src/backend/domains/projects/: models.py  repository.py  router.py  service.py
src/backend/domains/realtime/: __init__.py  router.py  service.py
src/backend/domains/tenants/: models.py  repository.py  router.py  service.py
src/backend/domains/users/: router.py
src/backend/middleware/: auth.py  quota.py  tenant_context.py
src/backend/prompts/: __init__.py  analyst_revision.txt  analyst_system.txt  evaluator_system.txt  evaluator_user.txt
src/backend/shared/: app_config.py  blob.py  clamav.py  cosmos.py  credential.py  event_consumer.py  event_types.py  events.py  exceptions.py  logging.py  metrics.py  models.py  pubsub.py  security_signals.py  webpubsub.py
src/backend/workers/: base.py
src/backend/workers/analysis/: __init__.py  agent.py  evaluator.py  handler.py  main.py
src/backend/workers/analysis/tools/: __init__.py  get_component_details.py  get_graph_neighbors.py  get_project_summary.py  run_impact_analysis.py  scoping.py
src/backend/workers/graph_builder/: handler.py  main.py
src/backend/workers/notification/: __init__.py  handler.py  main.py
src/backend/workers/parser/: handler.py  main.py  models.py
src/backend/workers/parser/parsers/: __init__.py  apim_policy.py  base.py  logic_app.py  openapi.py
src/backend/workers/scan_gate/: handler.py  main.py
src/backend/workers/shared/: dead_letter.py
src/frontend/: .env.local.example  .gitignore  Dockerfile  eslint.config.mjs  instrumentation.ts  junit.xml  next.config.ts  package-lock.json  package.json  playwright-results.xml  playwright.config.ts  tsconfig.test.json
src/worker-analysis-fsharp/: AgentOrchestrator.fs  AnalysisHandler.fs  Config.fs  CosmosRepository.fs  Credential.fs  Dockerfile  EventGridClient.fs  EventTypes.fs  IntegrisightWorkerAnalysis.fsproj  JsonHelpers.fs  Models.fs  Program.fs  Telemetry.fs  Tools.fs  WebPubSubService.fs  Worker.fs
src/worker-graph-builder-go/: Dockerfile  go.mod  go.sum  main.go
src/worker-parser-rust/: Cargo.toml  Dockerfile
src/worker-parser-rust/src/: config.rs  event_types.rs  lib.rs  main.rs  models.rs
src/worker-parser-rust/src/azure/: blob.rs  cosmos.rs  credential.rs  mod.rs
src/worker-parser-rust/src/azure/event_grid/: consumer.rs  mod.rs  publisher.rs
src/worker-parser-rust/src/parsers/: apim_policy.rs  logic_app.rs  mod.rs  openapi.rs
src/worker-parser-rust/src/worker/: base.rs  handler.rs  mod.rs
tests/backend/: conftest.py  test_agent_tools.py  test_analysis_api.py  test_analysis_worker.py  test_apim_policy_parser.py  test_app.py  test_app_config.py  test_artifact_delete_rename.py  test_artifacts.py  (+34 more)
(+235 files in other folders)
