[project]
name = "integration-copilot-api"
version = "0.1.0"
description = "Integration Copilot API — a multitenant SaaS backend powered by FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "azure-identity",
    "azure-cosmos",
    "azure-storage-blob",
    "azure-eventgrid",
    "structlog",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-logging",
    "azure-monitor-opentelemetry-exporter",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["../../tests/backend"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
