[package]
name = "integrisight-worker-parser-rust"
version = "0.1.0"
edition = "2024"
description = "Rust-based artifact parser worker for Integrisight.ai"
license = "MIT"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
roxmltree = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ulid = "1.1.4"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
